# ovd-platform

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  CREDITS.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ovd-ci.yml  tui-release.yml  upstream-sync.yml
docs/: ARCHITECTURE_EVOLUTION.md  CLOUD_ALTERNATIVES.md  DEPLOYMENT.md  FASE4_EVALUACION_RUN1.md  GETTING_STARTED.md  KNOWLEDGE_STRATEGY.md  M2B_MLX_PLAN.md  MCP_VALIDACION_v1.0.md  MODEL_STRATEGY.md  OSS_MODELS_ANALYSIS.md  PLAN_IMPLEMENTACION_v1.0.md  ROADMAP.md  SDD_OVD_TUI_v1.0.md  SUPERPOWERS_OVD.md  TEAMS_AGENT_PROPOSAL_v1.0.md  VISION_INTEGRATION.md  WEB_APP_ANALYSIS.md  gaps.md  ovd-architecture.drawio  vdo-multitenant-architecture.md
docs/adr/: ADR-001-rag-sin-bridge.md
docs/bugs/: BUG-005-split-text-loop-infinito.md
docs/security/: SEC-2026-03-28.md
infra/caddy/: Caddyfile
infra/nginx/: nginx.conf
infra/nginx/conf.d/: ovd.conf
infra/otel/: config.yaml
infra/postgres/: init.sql  init_prod.sql  rag.sql  rls.sql
scripts/: build-tui.sh  migrate.sh  seed-demo.ts  seed-rag.sh  seed.py  setup-db.sh  sync-upstream.sh  update-skills.sh
sdks/python/: pyproject.toml
sdks/python/ovd_client/: __init__.py  client.py
src/dashboard/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts  vitest.config.ts
src/dashboard/src/: App.tsx
src/dashboard/src/api/: auth.ts  client.ts  ovd.ts
src/dashboard/src/components/: CycleDetail.tsx  Layout.tsx  ProjectModal.tsx
src/dashboard/src/context/: AuthContext.tsx
src/engine/: .dockerignore  Dockerfile  alembic.ini  api.py  audit_logger.py  auth.py  checkpointer.py  context_resolver.py  docker-entrypoint.sh  github_helper.py  graph.py  main.py  mcp_client.py  model_router.py  nats_client.py  nightly_researcher.py  pending_store.py  pyproject.toml  rag.py  rag_seed.py  rate_limiter.py  requirements.txt  research.py  search_providers.py  secrets_adapter.py  startup_check.py  task_checkout.py  telemetry.py  template_loader.py  web_researcher.py
src/engine/migrations/: env.py  seed_prod.sql
src/engine/migrations/versions/: 20260101_0000_initial_schema.py  20260412_0001_web_sources.py  20260420_0002_nats_dlq.py
src/engine/routers/: api_v1.py  auth_router.py
src/engine/templates/: system_analyzer.md  system_backend.md  system_database.md  system_devops.md  system_frontend.md  system_qa.md  system_router.md  system_sdd.md  system_security.md
src/engine/tests/: conftest.py  factories.py  test_alembic_migrations.py  test_api_e2e.py  test_api_health.py  test_api_v1_approvals.py  test_api_v1_telemetry.py  test_audit_logger.py  test_bug04_security_fallback.py  test_docker_smoke.py  test_graph_analyze_fr.py  test_graph_approval.py  test_graph_deliver.py  test_graph_e2e.py  test_graph_routing.py  test_graph_security_qa.py  test_heartbeat.py  test_model_router.py  test_nats_client.py  test_nats_integration_a.py  test_nats_integration_b.py  test_pending_store.py  test_rag_bootstrap.py  test_rag_chunkers.py  test_rag_regression.py  test_rag_seed_unit.py  test_rag_unit.py  test_reducers.py  test_regression_sprint.py  test_resilience_circuit_breaker.py  test_resilience_nats_dlq.py  test_resilience_qa_fallback.py  test_resilience_retry.py  test_resilience_stale_cancel.py  test_resilience_timeout.py  test_s10_auth.py  test_s10_telemetry.py  test_s11_search_providers.py  test_s11_web_research_graph.py  test_s11g_nightly.py  (+10 more)
src/engine/tools/: __init__.py  file_tools.py  mcp_tools.py
src/finetune/: Modelfile  benchmark.py  eval_chat.py  export_cycles.py  generate_synthetic.py  mlx_config.yaml  mlx_config_base_test.yaml  parse_training_log.py  pipeline.sh  pyproject.toml  requirements.txt  requirements_oss.txt  run_training.sh  upload_finetune.py  upload_finetune_oss.py  validate_dataset.py
src/finetune/data/: pipeline_report.txt
src/knowledge/: __init__.py  bootstrap.py  chunkers.py  cli.py
src/mcp/nats/: Dockerfile  pyproject.toml  requirements.txt  server.py
src/mcp/oracle/: Dockerfile  compat.py  connections.py  pyproject.toml  requirements.txt  server.py
src/tui/: Cargo.toml
src/tui/src/: main.rs
src/tui/src/api/: client.rs  mod.rs
src/tui/src/config/: mod.rs
src/tui/src/models/: auth.rs  mod.rs  quota.rs  session.rs  workspace.rs
src/tui/src/ui/: app.rs  delivery.rs  history.rs  login.rs  mod.rs  onboarding.rs  quota.rs  session.rs  workspace.rs
(+20 files in other folders)
